Added Changes as discussed